# yw-stake-pool

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  SECURITY_AUDIT.md  package.json  pnpm-lock.yaml  security.txt
.github/workflows/: main.yml  publish-js-client.yml
.husky/: commit-msg
audit/: SECURITY_AUDIT.md
clients/js/: README.md  package.json  pnpm-lock.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
example/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
example/src/: complete-flow.ts  config.ts  devnet-integration-test.ts  index.ts  list-all-pools.ts  list-pools.ts  pool-admin.ts  setup-tokens.ts  simple-example.ts  user-staking.ts  utils.ts
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: assertions.rs  constants.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  processor_old.rs  state.rs  utils.rs
program/src/processor/: admin.rs  close.rs  helpers.rs  initialize.rs  mod.rs  program_authority.rs  rewards.rs  stake.rs
program/tests/: README.md  admin_pool_creation_tests.rs  integration_test_litesvm.rs  integration_tests.rs  m01_frontrun_dos_tests.rs  reward_rate_change_tests.rs  security_h02_tests.rs  security_m02_tests.rs  security_m03_tests.rs  spl_token_tests.rs  timestamp_validation_tests.rs  unit_tests.rs
program/tests/common/: mod.rs
scripts/: generate-clients.mjs  utils.mjs
scripts/lib/: program-authority.mjs
scripts/program/: accept-program-authority.mjs  add-authorized-creator.mjs  cancel-authority-transfer.mjs  close-authority.mjs  deploy.mjs  format.mjs  initialize-authority.mjs  lint.mjs  list-authorized-creators.mjs  (+6 more)
(+7 files in other folders)
