[package]
name = "your-wallet-stake-pool"
version = "1.6.1"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "8PtjrGvKNeZt2vCmRkSPGjss7TAFhvxux2N8r67UMKBx"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
borsh = "^0.10"
shank = "^0.4.5"
num-derive = "^0.3"
num-traits = "^0.2"
solana-program = "^2.3"
thiserror = "^1.0"
spl-token-2022 = { version = "^6.0", features = ["no-entrypoint"] }
solana-sdk-ids = "3.0.0"
solana-security-txt = "1.1.1"

[dev-dependencies]
# LiteSVM 0.7.x is compatible with Solana SDK 2.x
litesvm = "0.7"
solana-sdk = "^2.3"
spl-associated-token-account = "6.0"
# Include test utilities from spl-token-2022
spl-token-2022 = { version = "^6.0", features = ["test-sbf"] }
